--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
+    <RelativeLayout
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize">
+        <TextView
+            android:layout_marginLeft="20dp"
+            android:layout_centerVertical="true"
+            android:textSize="16sp"
+            android:textColor="@android:color/white"
+            android:text="@string/statistics"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <FrameLayout
+            android:foreground="?attr/selectableItemBackground"
+            android:layout_alignParentRight="true"
+            android:paddingRight="20dp"
+            android:paddingLeft="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+            <ImageView
+                android:layout_gravity="center"
+                android:layout_width="16dp"
+                android:layout_height="16dp" />
+        </FrameLayout>
+    </RelativeLayout>
+
+    <TextView
+        android:textColor="#0000ff"
+        android:layout_marginTop="20dp"
+        android:textSize="16sp"
+        android:layout_marginLeft="16dp"
+        android:text="@string/followers"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <com.spyman.telegramconcurs.diagram.DiagramView
         android:id="@+id/diagram"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:padding="10dp" />
+        android:layout_margin="16dp" />
 
-</RelativeLayout>
+</LinearLayout>
