--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,5 +48,9 @@
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_margin="16dp" />
+    <com.spyman.telegramconcurs.diagram.GraphControlView
+        android:id="@+id/controlView"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"/>
 
 </LinearLayout>
